code/development-env/manifests/datalabs-auth.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: datalab-auth-deployment
  namespace: test
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: datalab-auth
        environment: test
    spec:
      containers:
        - name: datalab-auth
          image: nerc/authorisation-svc:0.15.0-20-ga6184cd
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /status
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: datalab-auth-service
  namespace: test
spec:
  ports:
    - name: auth
      port: 80
      targetPort: 8000
  selector:
    app: datalab-auth
  type: NodePort
